--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@mantine/carousel": "^6.0.15",
+    "@mantine/core": "^6.0.15",
+    "@mantine/dates": "^6.0.15",
+    "@mantine/form": "^6.0.15",
+    "@mantine/hooks": "^6.0.15",
+    "@mantine/modals": "^6.0.15",
+    "@mantine/notifications": "^6.0.15",
+    "@mantine/nprogress": "^6.0.15",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
+    "embla-carousel-react": "^7.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0" 
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
